accessibility: fix for: Target has insufficient size (65.9px by 15px, should be at least 24px by 24px), Target has insufficient space to its closest neighbors. Safe clickable space has a diameter of 8px instead of at least 24px.: .allbookingoptionstable_r1 > .col-md-9 > .teacher.text-left.font-size-sm > span:nth-child(3) > .col-teacher-teachers-container.flex-wrap-container > .col-teacher-teacher.flex-wrap-element > a (https://github.com/Wunderbyte-GmbH/Wunderbyte-GmbH/issues/1597)

--- a/styles.css
+++ b/styles.css
@@ -410,7 +410,6 @@
 }
 
 .wunderbyteTableFilter .datepickerform {
-    margin: 20px;
     padding: 10px;
     position: relative;
     display: block;
